# python-fastapi-template

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0686d3119d3f_update_product_add_length_for_varchar.py  ac05d0baf838_first_commit.py
app/: main.py
app/api/v1/: __init__.py  products.py
app/api/v1/endpoints/: products.py
app/core/: config.py  dependencies.py  events.py
app/core/config/: __init__.py  common.py  database.py  logging.py  sentry.py
app/core/database/: base.py
app/core/repository/: base.py
app/crud/: base.py
app/database/: base.py
app/models/: product.py
app/schemas/: __init__.py
app/services/: product.py
scripts/: start.sh
tests/: conftest.py
tests/crud/: test_product.py
tests/utils/: products.py
