[tool.poetry]
name = "python-fastapi-template"
version = "0.1.0"
description = ""
authors = ["prd-tan-truong <tan.truong@paradox.ai>"]

[tool.poetry.dependencies]
python = "^3.10.4"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
fastapi = "^0.80.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.9.5"}
alembic = "^1.8.1"
mysqlclient = "^2.1.1"
SQLAlchemy = "^1.4.40"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
